fix the alignment

--- a/src/screens/ActivityScreen/ActivityScreen.scss
+++ b/src/screens/ActivityScreen/ActivityScreen.scss
@@ -95,22 +95,46 @@
     font-family: 'Poppins';
     text-align: left;
 }
-
+/*
 .activityArea {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    width: 100%;
 }
 
 .activityContainer {
-    width: 48%;
-    //height: calc(50% - 10px);
+    //width: 48%;
+    //height: auto;
+    //height: calc(100% - 10px);
     background-color: #1E1E1E;
     padding: 15px;
     border-radius: 10px;
     border: 1px solid #FAB81E;
-    margin-bottom: 10px;
+    //margin-bottom: 10px;
     box-sizing: border-box;
+}
+*/
+
+.activityArea {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    width: 100%;
+}
+
+.activityContainer {
+    background-color: #1E1E1E;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #FAB81E;
+    box-sizing: border-box;
+}
+
+.activityColumn {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .activityIconBackground {
